CHANGELOG
---------
* Tue Jan 28 2020 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.2u-6
- Update to 1.0.2u

* Sat Mar 23 2019 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.2r-5
- Update to 1.0.2r

* Thu Oct 25 2018 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.2p-4
- Update to 1.0.2p

* Wed Apr 04 2018 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.2o-3
- Update to 1.0.2o

* Sun Mar 26 2017 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.2k-2
- Update to 1.0.2k

* Sat Nov 26 2016 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.2j-1
- Update to 1.0.2j

* Wed Sep 28 2016 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1u-15
- Update to 1.0.1u

* Tue May 24 2016 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1t-14
- Update to 1.0.1t

* Wed Mar 02 2016 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1s-13
- Update to 1.0.1s

* Wed Feb 10 2016 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1r-12
- Update to 1.0.1r

* Sat Dec 12 2015 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1q-11
- Update to 1.0.1q

* Sat Jul 11 2015 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1p-10
- Update to 1.0.1p

* Sat Jun 13 2015 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1o-9
- Update to 1.0.1o

* Fri Mar 20 2015 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1m-8
- Update to 1.0.1m

* Sat Jan 10 2015 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1k-7
- Update to 1.0.1k

* Fri Oct 17 2014 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1j-6
- Update to 1.0.1j

* Fri Aug 15 2014 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1i-5
- Update to 1.0.1i

* Wed Jun 11 2014 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1h-4
- Update to 1.0.1h
- Drop 0.9.8g compat libraries

* Tue Apr 08 2014 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1g-3
- Update to 1.0.1g

* Sat Jan 25 2014 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1f-2
- Update to 1.0.1f

* Sat Nov 16 2013 Tom G. Christensen <swpkg@jupiterrise.com> - 1.0.1e-1
- Update to 1.0.1e
